--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*google fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
@@ -9,4 +10,104 @@ header{
     width: 100%;
     height: 50px;
     border: 1px solid black;
+}
+main{
+    width: 100%;
+    height: 100vh;
+    /* border: 1px solid black; */
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+.container{
+    width: 988px;
+margin-top: 45px;
+}
+/*========
+first banner
+==========*/
+.first-banner{
+    width: 100%;
+    /* background: rebeccapurple; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.banner-description{
+    width: 400px;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+}
+.banner-description h2{
+    font-size: 40px;
+    color: #3A3A3A;
+}
+.banner-description p{
+    margin-top: 23px;
+    line-height: 20px;
+    margin-bottom: 25px;
+    font-size: 17px;
+    text-align: justify;
+}
+.button-design{
+    display: flex;
+    border: 1px solid black;
+    width: 168px;
+    margin-top: 13px;
+	height: 54px;
+    border-radius: 43px;
+    background-color: #E02C6D;
+}
+.button-design a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: #ffffff;
+    font-family: 'Poppins';
+    padding: 14px 13px;
+}
+.fa-arrow-right{
+	margin-top: 19px;
+    font-size: 17px;
+    color: #fff;
+}
+.first-banner img{
+	width: 403px;
+    height: 338px
+}
+
+
+
+
+
+
+
+
+
+
+/*===========
+media query
+=============*/
+
+@media only screen and (max-width: 688px){
+   main{
+       width: 100%;
+   }
+    .container{
+        width: 100%;
+    }
+.first-banner{
+    grid-template-columns: repeat(1, 1fr);
+    background-color: rebeccapurple;
+}
+.banner-description{
+    width: 100%;
+}
+.banner-description p{
+    width: 100%;
+}
+.first-banner img{
+    width: 300px;
+    height: 300px;
+}
 }
